--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Logan Sorenson <logan.sorenson@gmail.com>
 Andre Smit <freevryheid@gmail.com>
 Zuzana Zahorova <zuzka.12@centrum.cz>
 Osman <osman@fuse.net>
+Olivier Verdier <olivier.verdier@gmail.com>
