--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Andre Smit <freevryheid@gmail.com>
 Zuzana Zahorova <zuzka.12@centrum.cz>
 Osman <osman@fuse.net>
 Olivier Verdier <olivier.verdier@gmail.com>
+Matyas Novak <novakmat@fzu.cz>
